fixed red gradient background not covering entire window height

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,11 +6,11 @@
 }
 html{
     font-size: 16px;
-    height: 100%;
+    min-height: 100%;
     background: rgb(126,0,0);
     background: linear-gradient(0deg, rgba(126,0,0,1) 0%, rgba(228,66,97,1) 100%);
     background-repeat: no-repeat;
-    max-width: 100%;
+    background-size: cover;
     overflow-x: hidden;
 }
 body{
